--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 body.sweet {
-    background: linear-gradient(135deg, #ffbbd2 0%, #f2cff7 50%, #c8e8ff 100%);
+    background: linear-gradient(135deg, #f7c0d3 0%, #f2cff7 50%, #d0e8f9 100%);
 }
 
 body.spicy {
