--- a/src/index.css
+++ b/src/index.css
@@ -1231,7 +1231,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .checkbox[data-state="checked"] {
-  background-color: var(--primary);
+  background-color: var(--spicy-accent);
   color: var(--primary-foreground);
 }
 
@@ -2467,3 +2467,4 @@ h1, h2, h3, h4, h5, h6,
     opacity: 1;
   }
 }
+
